5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1596_1016.log
== SUBMITION (2019-03-26 18:48:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladotrianguloa=float(input("digite o comprimento a"))
ladotriangulob=float(input("digite o comprimento b"))
ladotrianguloc=float(input("digite o comprimento c"))
semiperimetro= (ladotrianguloa+ladotriamgulob+ladotrianguloc) /2
from math import sqrt
areatriangulo=sqrt(semiperimetro*(semiperimetro-ladotrianguloa)* (semiperimetro*(semiperimetro-ladotriangulob)*(semiperimetro*(semiperimetro-ladotrianguloc))
print(round(areatriangulo,5))																						
-- EXECUTION TIME:
0.188536
-- ERROR:
  File "/home/codebench/codes/1596/1016/main.py", line 10
    print(round(areatriangulo,5))																						
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladotrianguloa=float(input("digite o comprimento a"))
ladotriangulob=float(input("digite o comprimento b"))
ladotrianguloc=float(input("digite o comprimento c"))
semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
from math import sqrt
areatriangulo= sqrt(semiperimetro*(semiperimetro-ladotrianguloa)*(semiperimetro-ladotriangulob)*(semiperimetro-ladotrianguloc))
print(round(areatriangulo,5))																						
-- EXECUTION TIME:
0.183442
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 7, in <module>
    semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
NameError: name 'ladotriamgulob' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:51:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladotrianguloa=float(input("digite o comprimento a"))
ladotriangulob=float(input("digite o comprimento b"))
ladotrianguloc=float(input("digite o comprimento c"))
semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
from math import sqrt
areatriangulo= sqrt(semiperimetro*(semiperimetro-ladotrianguloa)*(semiperimetro-ladotriangulob)*(semiperimetro-ladotrianguloc))
print(round(areatriangulo,5))																						
-- EXECUTION TIME:
0.186555
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1016/main.py", line 7, in <module>
    semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
NameError: name 'ladotriamgulob' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladotrianguloa=float(input("digite o comprimento a"))
ladotriangulob=float(input("digite o comprimento b"))
ladotrianguloc=float(input("digite o comprimento c"))
semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
from math import sqrt
areatriangulo= sqrt(semiperimetro*(semiperimetro-ladotrianguloa)*(semiperimetro-ladotriangulob)*(semiperimetro-ladotrianguloc))
print(round(areatriangulo,5))																						
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    semiperimetro= (ladotrianguloa + ladotriamgulob + ladotrianguloc) / 2
NameError: name 'ladotriamgulob' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:52:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
ladotrianguloa=float(input("digite o comprimento a"))
ladotriangulob=float(input("digite o comprimento b"))
ladotrianguloc=float(input("digite o comprimento c"))
semiperimetro= (ladotrianguloa + ladotriangulob + ladotrianguloc)/2
from math import sqrt
areatriangulo= sqrt(semiperimetro*(semiperimetro-ladotrianguloa)*(semiperimetro-ladotriangulob)*(semiperimetro-ladotrianguloc))
print(round(areatriangulo,5))																						
-- EXECUTION TIME:
0.193956
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
